--- a/package.json
+++ b/package.json
@@ -7,13 +7,27 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "graphql-codegen": "graphql-codegen -r dotenv/config --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/introspection": "^4.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rtk-query/graphql-request-base-query": "^2.2.0",
+    "@types/webpack-env": "^1.18.1",
+    "dotenv": "^16.1.4",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
+    "@graphql-codegen/near-operation-file-preset": "^2.5.0",
+    "@graphql-codegen/typescript-rtk-query": "^2.4.1",
+    "@types/node": "^20.2.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
