--- a/codegen.yml
+++ b/codegen.yml
@@ -38,12 +38,12 @@ generates:
              * for this file to be re-created
              */
       - add:
-          content: 'module.hot?.accept();'
+          content: 'import.meta.webpackHot?.accept();'
       - typescript-operations
       - typescript-rtk-query:
-          importBaseApiFrom: './baseApi'
+          importBaseApiFrom: '../baseApi'
           exportHooks: true
-          overrideExisting: 'module.hot?.status() === "apply"'
+          overrideExisting: 'import.meta.webpackHot?.status() === "apply"'
     config:
       maybeValue: T # normally, this would be T | null, but our msw mock returns everything as nullable, so we want to force these as non-nullalbe
   .introspection.json:
