--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@graphql-codegen/typescript-operations": "^4.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@rtk-query/graphql-request-base-query": "^2.2.0",
+    "@types/react-helmet": "^6.1.6",
+    "@types/react-icons": "^3.0.0",
     "@types/webpack-env": "^1.18.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
+    "react-router-dom": "^6.12.0",
     "sass": "^1.62.1"
   },
   "devDependencies": {
